<resources>
    <string name="app_name">SKPOS</string>
    <string name="action_settings">Settings</string>

    <!-- Fragment Labels -->
    <string name="StartMenuLabel">SKPOS Home</string>
    <string name="SettingsLabel">Settings</string>

    <!-- StartMenu Fragment Strings -->
    <string name="WelcomeText">Welcome to the SKPOS Ordering System</string>
    <string name="ConfigCheckingText">Checking Device Configuration...</string>

    <!-- App-Important Configuration Strings for the SettingsManager Class-->
    <string name="access_key_file_name">AccessStringFileName</string>
    <string name="access_key_pref_key">SecretAccessKey</string>
    <string name="port_pref_key">ServerPort</string>
    <string name="IP_pref_key">ServerIP</string>

    <!-- Settings Strings -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Image Content Description Values -->
    <string name="logoContentDescription">SKPOS Logo</string>
    <string name="NewOrderButtonText">Start New Order</string>
    <string name="UnfinishedOrderButtonText">Unfinished Orders</string>
    <string name="PreviousOrderButtonText">Previously Sent Orders</string>
    <string name="SettingsButtonText">Device Settings</string>
</resources>